# hip-kernel-lab

./: CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml
conv_2d/: implicit_gemm.cpp  naive.cpp  winograd.cpp
docs/: mfma_guide.md  optimization_patterns.md  register_pressure.md  wavefront_guide.md
fft/: fft2d.cpp  radix2.cpp
flash_attn/: backward.cpp  causal.cpp  flash_attn.cpp  paged_attn.cpp
histogram/: multi_channel.cpp  privatized.cpp
mat_mul/: double_buffered.cpp  mfma.cpp  naive.cpp  pipelined.cpp  tiled.cpp
reduce_max/: block_reduce_max.cpp
reduce_sum/: atomic.cpp  block_reduce.cpp  multi_pass.cpp  warp_shuffle_reduce.cpp
scan/: blelloch.cpp  prefix_sum.cpp  scan_large.cpp
sort/: bitonicsort.cpp  radix_sort.cpp
stream_compaction/: compact.cpp
vec_add/: async_copy.cpp  naive.cpp  optimized.cpp  vectorized_main.cpp
vec_dot/: naive.cpp  shared_reduction.cpp  warp_shuffle.cpp
