cmake_minimum_required(VERSION 3.20)
project(hip-kernel-lab LANGUAGES CXX HIP)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_HIP_STANDARD 17)
find_package(hip REQUIRED)

add_subdirectory(vec_add)
add_subdirectory(vec_dot)
add_subdirectory(mat_transpose)
add_subdirectory(mat_mul)
add_subdirectory(conv_2d)
add_subdirectory(reduce_sum)
add_subdirectory(reduce_max)
add_subdirectory(histogram)
add_subdirectory(flash_attn)
add_subdirectory(sort)
add_subdirectory(scan)
